# vtex-orders-etl

./: .gitignore  README.md  process_report_file.py  pyproject.toml  requirements-dev.txt  requirements.txt
db/: handler.py
functions/orders-etl/: .funcignore  README.md  etl.py  function_app.py  requirements-dev.txt  requirements.txt  vtex_client.py
functions/orders-etl/utils/: db.py  types.py
sql/: order_tables.sql
